fixes: unit & integration tests